# k3s-testbed

./: README.md  create-kafka-client-ssl  install.sh  kdash.sh
deployments/airflow/: airflow_values.yaml  delete.sh  ingress.yaml  install.sh  secrets.yaml
deployments/cert-manager/: aws-clusterissuer.yaml  delete.sh  install.sh
deployments/docker-registry/: delete.sh  ingress.yaml  install.sh  registry-values.yaml
deployments/jobs/bitcoin-stream/: build.sh  configmap.yaml  job.yaml
deployments/jobs/setup/: secrets.yaml
deployments/jobs/spark-streaming-kafka-test/: Dockerfile  build.sh  job.yaml  pv-pvc.yaml  read_kafka_write_disk.py
deployments/kafka/: delete.sh  ingress.yaml  install.sh  kafka_cluster.yaml  kafka_values.yaml
deployments/kafka-ui/: delete.sh  ingress.yaml  install.sh  kafka_ui_values.yaml  registry_values.yaml
deployments/kubernetes-dashboard/: delete.sh  ingress.yaml  install.sh  sa_roles.yaml
deployments/longhorn/: delete.sh  ingress.yaml  install.sh  longhorn-values.yaml  service.yaml
deployments/metallb/: delete.sh  install.sh  metallb-config.yaml
deployments/spark/: delete.sh  ingress.yaml  install.sh  spark_values.yaml
deployments/traefik/: delete.sh  install.sh  middleware.yaml  traefik-values.yaml
images/: deploy.sh
images/alpaca-crypto-client/: Dockerfile  build.sh  pyproject.toml
images/alpaca-crypto-client/alpaca_crypto_client/: alpaca_subscriber.py  main.py
images/spark-base/: Dockerfile  build.sh
images/spark-streaming-job-base/: Dockerfile  build.sh
