[tool.poetry]
name = "alpaca-crypto-client"
version = "0.0.1"
description = ""
authors = ["andersonvc <ryan@anderson.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alpaca-py = "^0.21.0"
confluent-kafka = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
